Fix calendar cell-sizing issue on Safari; Add scrollbar where events exceed cell-size

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -29,7 +29,6 @@ p {
     margin: 10px 5px 0 5px;
 }
 
-
 /* HEADER */
 .nav-custom {
     padding: 0;
@@ -162,7 +161,7 @@ p {
     float: none;
     position: relative;
     width: 100%;
-    aspect-ratio: 1;
+    padding-top: 100%;
 }
 .day-label {
     background-color: none !important;
@@ -187,6 +186,32 @@ p {
     color: rgba(0, 0, 0, 0.6);
     font-size: 1rem;
 }
+.cal-event-wrapper {
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 99%;
+
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.cal-event-wrapper::-webkit-scrollbar {
+    background-color: none;
+    border-radius: 25px;
+    width: 10px;
+}
+.cal-event-wrapper::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 25px;
+    
+}
+.cal-event-wrapper::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 25px;
+    margin: 2px 0;
+}
 .cal-event {
     background-color: rgba(255, 0, 0, 0.75);
     border-radius: 5px;
@@ -194,6 +219,7 @@ p {
     margin: 3px;
     padding: 10px 0;
     position: relative;
+    width: 90%;
     height: 0;
     opacity: 90%;
 }
@@ -218,7 +244,7 @@ p {
         padding: 25px 0;
     }
     .cal-cell {
-        aspect-ratio: 0.65;
+        padding-top: 150%;
     }
 }
 
@@ -227,7 +253,7 @@ p {
         padding: 0 10px;
     }
     .cal-cell {
-        aspect-ratio: 0.5;
+        padding-top: 200%;
     }
     .event-name {
         font-size: 0.7rem;
